# bedrock-data

./: .env.example  .gitignore  README.md  pyproject.toml
bedrock/: config.py
bedrock/ingestion/: raw_ingester.py
bedrock/olap/: load_to_clickhouse.py
docker/: clickhouse_user_config.xml  docker-compose.yml
infra/: 01-create-storage-layer.sh  02-create-databricks.sh  03-create-vm-host.sh  start-bedrock-vm.sh  stop-bedrock-services.sh
notebooks/: refine_daily_data.ipynb
